--- a/vignettes/TTU.Rmd
+++ b/vignettes/TTU.Rmd
@@ -38,7 +38,7 @@ Part one is to undertake and exploratory analysis in order to finalise the input
 
 When you have determined the inputs that you will be using, you can implement the reporting workflow, which involves the following steps.
 
-## Create project workspace
+### Create project workspace
 
 The following command will create a project directory in the location and with the name of your choosing. 
 ```{r eval = F}
@@ -46,7 +46,7 @@ path_to_CSP_1L_chr <- write_reporting_dir(path_to_write_to_1L_chr = "../Temp tes
                                           new_dir_nm_1L_chr = "AQoL-6D_Vignette")
 ```
 
-## Edit template program
+### Edit template program
 The preceding command will have created a template RMD file for you to edit in the CSP sub-directory of your project directory. That template file will look like this: https://github.com/ready4-dev/TTU/blob/master/inst/Project/CSP/CSP.Rmd
 
 Edit the file with the information relevant to your study. Two vignettes that illustrate the workflow functions that you will be using are:
@@ -54,7 +54,7 @@ Edit the file with the information relevant to your study. Two vignettes that il
 - [Reporting workflow (General population - EQ5D example)](CSP_EQ5D_TTU.html)
 - [Reporting workflow (Clinical population - AQoL6D example)](CSP_AQOL6D_TTU.html)
 
-## Run and share program
+### Run and share program
 Once you are ready to run your analysis, use the `write_csp_output` function. The `write_csp_output` function is required as simply knitting the RMD document you edited will not work as intended (although you can run chunks interactively if you prefer). Another advantage of `write_csp_output` is that if you provide details of your dataverse dataset (which will be different to the value in the below example), it will save a PDF copy of your workflow program in that dataset.
 
 ```{r eval = F}
