--- a/data-raw/inst/Markdown/_Share_Report.Rmd
+++ b/data-raw/inst/Markdown/_Share_Report.Rmd
@@ -11,7 +11,7 @@ Upload analysis reports to an online data repository.
 ```{r message=FALSE, results='hide', warning=FALSE}
 reports_tb <- tibble::tibble(ds_obj_nm_chr = params_ls$rprt_lup$rprt_nms_chr, 
                             title_chr = params_ls$rprt_lup$title_chr) 
-ready4use::write_fls_to_dv_ds(reports_tb, 
+ready4::write_to_dv_with_wait(reports_tb, 
                               dv_nm_1L_chr = outp_smry_ls$dv_ls$dv_nm_1L_chr, 
                               ds_url_1L_chr = outp_smry_ls$dv_ls$ds_url_1L_chr,
                               parent_dv_dir_1L_chr = outp_smry_ls$dv_ls$parent_dv_dir_1L_chr, 
