--- a/data-raw/inst/Markdown/_Write_Inputs_For_Main_Analysis.Rmd
+++ b/data-raw/inst/Markdown/_Write_Inputs_For_Main_Analysis.Rmd
@@ -11,7 +11,7 @@ Write a copy of the input parameters.
 saveRDS(params_ls, here::here(paste0(paths_ls$output_data_dir_1L_chr,
                                      "/I_INPUTS_",
                                      params_ls$rprt_type_1L_chr,
-                                     ".rds")))
+                                     ".RDS")))
 ```
 
 `r ifelse((paths_ls$write_to_dir_nm_1L_chr == "Fake" & params_ls$rprt_type_1L_chr == "Analysis"),"Write a local copy of the fake dataset used in this analysis.","")`
