--- a/data-raw/vignettes/_OLD_EQ5D_TTU.Rmd
+++ b/data-raw/vignettes/_OLD_EQ5D_TTU.Rmd
@@ -210,7 +210,7 @@ if(!is.null(dv_ls)){
                       rprt_lup = TTU::transform_rprt_lup(rprt_lup, 
                                                          add_suplry_rprt_1L_lgl = F,
                                                          add_sharing_rprt_1L_lgl = T))
-  ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "AAA_SHARING_MTH",
+  ready4::write_to_dv_with_wait(dss_tb = tibble::tibble(ds_obj_nm_chr = "AAA_SHARING_MTH",
                                                         title_chr = params_ls$subtitle_1L_chr),
                                 dv_nm_1L_chr = dv_ls$primary_dv_chr[1],
                                 ds_url_1L_chr = dv_ls$primary_dv_chr[2],
@@ -300,7 +300,7 @@ if(!is.null(dv_ls$secondary_1_dv_chr)){
                       rprt_lup = TTU::transform_rprt_lup(rprt_lup, 
                                                          add_suplry_rprt_1L_lgl = F,
                                                          add_sharing_rprt_1L_lgl = T))
-    ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "AAA_SHARING_MTH",
+    ready4::write_to_dv_with_wait(dss_tb = tibble::tibble(ds_obj_nm_chr = "AAA_SHARING_MTH",
                                                         title_chr = params_ls$subtitle_1L_chr),
                                 dv_nm_1L_chr = dv_ls$primary_dv_chr[1],
                                 ds_url_1L_chr = dv_ls$primary_dv_chr[2],
@@ -387,7 +387,7 @@ if(!is.null(dv_ls$secondary_2_dv_chr)){
                       rprt_lup = TTU::transform_rprt_lup(rprt_lup, 
                                                          add_suplry_rprt_1L_lgl = F,
                                                          add_sharing_rprt_1L_lgl = T))
-      ready4use::write_fls_to_dv_ds(dss_tb = tibble::tibble(ds_obj_nm_chr = "AAA_SHARING_MTH",
+      ready4::write_to_dv_with_wait(dss_tb = tibble::tibble(ds_obj_nm_chr = "AAA_SHARING_MTH",
                                                         title_chr = params_ls$subtitle_1L_chr),
                                 dv_nm_1L_chr = dv_ls$primary_dv_chr[1],
                                 ds_url_1L_chr = dv_ls$primary_dv_chr[2],
