--- a/vignettes/V_01.Rmd
+++ b/vignettes/V_01.Rmd
@@ -20,32 +20,87 @@ library(youthvars)
 library(TTU)
 ```
 
+
 ```{r}
-A <- Ready4useRepos(gh_repo_1L_chr = "ready4-dev/youthvars", 
-                          gh_tag_1L_chr = "Documentation_0.0") %>%  
-  ingest(fls_to_ingest_chr = "ymh_YouthvarsSeries",
-         metadata_1L_lgl = F)
-A@a_Ready4useDyad@ds_tb <- A@a_Ready4useDyad@ds_tb %>%
-            youthvars::transform_raw_ds_for_analysis()
+# transform_dyad_for_analysis <- function(data_Ready4useDyad){
+#   data_Ready4useDyad@ds_tb <- data_Ready4useDyad@ds_tb %>%
+#             youthvars::transform_raw_ds_for_analysis()
+#   data_Ready4useDyad@dictionary_r3 <- data_Ready4useDyad@dictionary_r3 %>%
+#     dplyr::mutate(var_nm_chr = dplyr::case_when(var_nm_chr == "phq9_total" ~  "PHQ9",
+#                                                 var_nm_chr == "bads_total" ~ "BADS",
+#                                                 var_nm_chr == "gad7_total" ~ "GAD7",
+#                                                 var_nm_chr == "oasis_total" ~ "OASIS",
+#                                                 var_nm_chr == "scared_total" ~ "SCARED",
+#                                                 var_nm_chr == "k6_total" ~ "K6",
+#                                                 var_nm_chr == "sofas_total" ~ "SOFAS",
+#                                                 T ~ var_nm_chr %>% purrr::map_chr(~.x)
+#                                                 ))
+#   return(data_Ready4useDyad)
+# }
 ```
 
 ```{r}
-A <- ScorzAqol6Adol(a_YouthvarsProfile = A)
+# A <- Ready4useRepos(gh_repo_1L_chr = "ready4-dev/youthvars", 
+#                           gh_tag_1L_chr = "Documentation_0.0") %>%  
+#   ingest(fls_to_ingest_chr = "ymh_YouthvarsSeries",
+#          metadata_1L_lgl = F) 
+# A@a_Ready4useDyad <- transform_dyad_for_analysis(A@a_Ready4useDyad)
 ```
 
 ```{r}
-B <- TTUParameters(a_ScorzProfile = A)
+A <- Ready4useDyad(ds_tb = Ready4useRepos(dv_nm_1L_chr = "fakes",
+                                          dv_ds_nm_1L_chr = "https://doi.org/10.7910/DVN/HJXYKQ",
+                                          dv_server_1L_chr = "dataverse.harvard.edu") %>%
+                     ingest(fls_to_ingest_chr = c("ymh_clinical_tb"),
+                            metadata_1L_lgl = F) %>%
+                     youthvars::transform_raw_ds_for_analysis(),
+                   dictionary_r3 = Ready4useRepos(dv_nm_1L_chr = "TTU", 
+                                                  dv_ds_nm_1L_chr = "https://doi.org/10.7910/DVN/DKDIB0", 
+                                                  dv_server_1L_chr = "dataverse.harvard.edu") %>%
+                     ingest(fls_to_ingest_chr = c("dictionary_r3"),
+                            metadata_1L_lgl = F)) %>%
+  renew(type_1L_chr = "label")
+```
+
+```{r}
+A <- YouthvarsSeries(a_Ready4useDyad = A,
+                     id_var_nm_1L_chr = "fkClientID",
+                     timepoint_var_nm_1L_chr = "round",
+                     timepoint_vals_chr = levels(procureSlot(B,
+                                                             "ds_tb")$round))
+```
+
+```{r}
+A <- TTUParameters(a_ScorzProfile = ScorzAqol6Adol(a_YouthvarsProfile = A))
 ```
 ```{r}
 # Make into renew method
-B <- renewSlot(B,
+A <- renewSlot(A,
                "a_ScorzProfile")
-B@b_SpecificParameters <- SpecificConverter(a_ScorzProfile = B@a_ScorzProfile) %>%
-  metamorphose() %>%
-  procureSlot("b_SpecificParameters")
+A <- renewSlot(A,
+               "b_SpecificParameters",
+               SpecificConverter(a_ScorzProfile = A@a_ScorzProfile) %>%
+                 metamorphose() %>%
+                 procureSlot("b_SpecificParameters"))
+```
+
+```{r}
+A <- renewSlot(A,
+               "b_SpecificParameters@predictors_lup",
+               Ready4useRepos(dv_nm_1L_chr = "TTU", 
+                              dv_ds_nm_1L_chr = "https://doi.org/10.7910/DVN/DKDIB0", 
+                              dv_server_1L_chr = "dataverse.harvard.edu") %>%
+                 ingest(fls_to_ingest_chr = c("predictors_r3"),
+                        metadata_1L_lgl = F)) 
 ```
 ```{r}
-B <- renewSlot(B,
+exhibitSlot(A,
+               "b_SpecificParameters@predictors_lup")
+```
+
+
+```{r}
+A <- renewSlot(A,
             "b_SpecificParameters@depnt_var_min_max_dbl",
                c(0.03,1)) %>%
   renewSlot("b_SpecificParameters@candidate_predrs_chr",
@@ -58,13 +113,331 @@ B <- renewSlot(B,
                "d_sexual_ori_s", "Region", "d_studying_working",
                "c_p_diag_s", "c_clinical_staging_s","SOFAS")) %>%
   renewSlot("b_SpecificParameters@msrmnt_date_var_nm_1L_chr",
-               "d_interview_date") %>%
-    renewSlot("b_SpecificParameters@predictors_lup",
-            Ready4useRepos(dv_nm_1L_chr = "TTU", 
-                    dv_ds_nm_1L_chr = "https://doi.org/10.7910/DVN/DKDIB0", 
-                    dv_server_1L_chr = "dataverse.harvard.edu") %>%
-  ingest(fls_to_ingest_chr = c("predictors_r3"),
-         metadata_1L_lgl = F)) 
+            "d_interview_date") 
+```
+```{r}
+A <- renewSlot(A,
+               "paths_chr",
+               tempdir()) %>%
+  renewSlot("b_SpecificParameters@fake_1L_lgl",
+            T) 
+  
+  
 ```
 
+```{r}
+C <- SpecificModels(a_YouthvarsProfile = A@a_ScorzProfile@a_YouthvarsProfile,
+                    b_SpecificParameters = A@b_SpecificParameters,
+                    paths_chr = A@paths_chr)
+```
+
+```{r}
+C <- ratify(C)
+```
+
+```{r}
+C <- author(C,
+            what_1L_chr = "workspace")
+```
+
+## Generate descriptive statistics
+
+We now generate tables and charts that describe our dataset. These are saved in a sub-directory of our output data directory.
+
+```{r}
+C <- author(C,
+            what_1L_chr = "descriptives",
+            digits_1L_int = 3L)
+```
+
+## Undertake exploratory modelling using baseline dataset
+
+### Identify preferred model types
+We next compare the performance of different model types. This step saves model objects and plots to a sub-directory of our output directory and outputs a `SpecificPredictors` object.
+
+```{r}
+C <- investigate(C,
+                 depnt_var_max_val_1L_dbl = 0.99,
+                 session_ls = sessionInfo())
+
+```
+
+After inspecting the output of the previous command, we can now specify the preferred model types to use from this point onwards.
+
+```{r}
+C <- renew(C,
+           new_val_xx = c("GLM_GSN_LOG", "OLS_CLL"),
+           type_1L_chr = "results",
+           what_1L_chr = "prefd_mdls")
+```
+
+### Identify preferred predictors and covariates
+Next we assess multiple versions of our preferred model type - one single predictor model for each of our candidate predictors and the same models with candidate covariates added. The output is a `SpecificFixed` object, plus a number of model/plot objects saved locally.
+
+```{r}
+C <- investigate(C)
+```
+
+### Assess performance of final model specification 
+After reviewing the output of the previous step, we specify the covariates we wish to add to the models.
+
+```{r}
+C <- renew(C,
+           new_val_xx = "SOFAS",
+           type_1L_chr = "results",
+           what_1L_chr = "prefd_covars")
+```
+
+We now assess the multivariate models. The output is a `SpecificMixed` object and more locally saved model/plot objects.
+
+```{r}
+C <- investigate(C)
+```
+
+## Undertake longitudinal modelling
+We next reformulate the models we finalised in the previous step so that they are suitable for modelling longitudinal change.
+
+### Primary analysis
+For our primary analysis, we use the longitudinal formulation of the models we previously selected. As with previous steps the output of this analysis is stored in the `F1` object and in files written to the local output data directory.
+
+```{r}
+C <- investigate(C)
+```
+
+### Secondary analyses
+For our secondary analyses, we specify alternative combinations of predictors and covariates.
+
+```{r}
+scndry_anlys_params_ls <- make_scndry_anlys_params(candidate_predrs_chr = c("SOFAS"),
+                                                    candidate_covar_nms_chr = c("d_sex_birth_s", 
+                                                                                "d_age", 
+                                                                                "d_sexual_ori_s",
+                                                                                "d_studying_working"),
+                                                    prefd_covars_chr = NA_character_) %>%
+  make_scndry_anlys_params(candidate_predrs_chr = c("SCARED","OASIS","GAD7"),
+                           candidate_covar_nms_chr = c("PHQ9", "SOFAS", 
+                                                       "d_sex_birth_s", 
+                                                       "d_age", 
+                                                       "d_sexual_ori_s",
+                                                       "d_studying_working"),
+                           prefd_covars_chr = "PHQ9")
+C <- investigate(C, 
+                 scndry_anlys_params_ls = scndry_anlys_params_ls)
+```
+
+# Report and disseminate findings
+
+## Create shareable models
+The model objects created and saved in our working directory by the preceding steps are not suitable for public dissemination. They are both too large in file size and, more importantly, include copies of our source dataset. We can overcome these limitations by creating shareable versions of the models. Two types of shareable version are created - copies of the original model objects in which fake data overwrites the original source data and tables of model coefficients.
+
+```{r}
+C <- authorData(C)
+```
+
+
+
+
+## Specify study reporting metadata
+We create a `TTUSynopsis` object that contains the fields necessary to render and share reports.
+
+```{r}
+C <- metamorphose(C)
+C <- TTUSynopsis(a_Ready4showPaths = C@a_Ready4showPaths,
+                 b_SpecificResults = C@b_SpecificResults,
+                 c_SpecificParameters = C@c_SpecificParameters,
+                 d_YouthvarsProfile = C@d_YouthvarsProfile,
+                 rmd_fl_nms_ls = C@rmd_fl_nms_ls)
+```
+
+We add metadata relevant to the reports that we will be generating to these fields.
+
+```{r}
+C <- C %>% 
+  renewSlot("authors_r3", 
+            ready4show::authors_tb) %>%
+        renewSlot("institutes_r3", 
+                  ready4show::institutes_tb) %>%
+  renewSlot("digits_int", c(3L,3L)) %>%
+  renewSlot("outp_formats_chr", c("PDF","PDF")) %>%
+  renewSlot("title_1L_chr", 
+            "A hypothetical utility mapping study using fake data") %>%
+  renewSlot("correspondences_r3",
+            old_nms_chr = c("PHQ9", "GAD7"),
+            new_nms_chr = c("PHQ-9", "GAD-7")) %>%
+      renewSlot("e_Ready4useRepos",
+                Ready4useRepos(dv_nm_1L_chr = "fakes", 
+                               dv_ds_nm_1L_chr = "https://doi.org/10.7910/DVN/D74QMP", 
+                               dv_server_1L_chr = "dataverse.harvard.edu"))
+
+```
+
+## Describe and share models
+We now create a `TTUReports` object, that we can use to efficiently retrieve and apply programs that can summarise our study results.
+
+```{r}
+D <- TTUReports(a_TTUSynopsis = C)
+```
+
+### Author model catalogues
+We download a program for generating a catalogue of models and use it to summarising the models created under each study analysis (one primary and two secondary). The catalogues are saved locally.
+
+```{r}
+author(D,
+       download_tmpl_1L_lgl = T,
+       what_1L_chr = "Catalogue")
+```
+
+### Share model catalogue
+We share the catalogues that we created, uploading a copy to our study online repository. To run this step you will need write permissions to the online repository.
+
+```{r}
+shareSlot(D,
+          slot_nm_1L_chr = "a_TTUSynopsis",
+          type_1L_chr = "Report",
+          what_1L_chr = "Catalogue")
+```
+
+### Share models
+We share tables of coefficients and other meta-data about the models we have created by posting them to the online repository. The object we create and share is designed to be used in conjunction with the `youthu` package to make it easier to make predictions with these models using new data. Again, you will need write permissions to the online repository.
+
+```{r}
+shareSlot(D,
+          "a_TTUSynopsis",
+          type_1L_chr = "Models",
+          what_1L_chr = "ingredients")
+```
+
+## Author manuscript
+We add some content about the manuscript we wish to author.
+
+```{r}
+C <- procureSlot(D,
+                 "a_TTUSynopsis") %>% 
+  renewSlot("background_1L_chr",
+            "Quality Adjusted Life Years (QALYs) are often used in economic evaluations, yet utility weights for deriving them are rarely directly measured in mental health services.") %>%
+  renewSlot("coi_1L_chr", "None declared") %>%
+  renewSlot("conclusion_1L_chr",
+            "Adolescent AQoL-6D utility can be derived from a range of psychological distress, depression and anxiety measures. TTU algorithms estimated from cross-sectional data can approximate longitudinal change but may slightly bias QALY predictions.") %>%
+  renewSlot("ethics_1L_chr", 
+            paste0("The study was reviewed and granted approval by ",
+                   ifelse(is.na(path_to_data_1L_chr),
+                          "no-one.",
+                          "the University of Melbourne’s Human Research Ethics Committee and the local Human Ethics and Advisory Group (1645367.1")
+                   )) %>%
+  renewSlot("funding_1L_chr", 
+            paste0("The study was funded by ",
+                   ifelse(is.na(path_to_data_1L_chr),
+                          "no-one.",
+                          "the National Health and Medical Research Council (NHMRC, APP1076940), Orygen and headspace."))) %>%
+  renewSlot("interval_chr", 
+            "three months") %>%
+  renewSlot("keywords_chr", 
+            c("anxiety", "AQoL","depression", 
+              "psychological distress", "QALYs", "utility mapping")) %>%
+  renewSlot("sample_desc_1L_chr",
+            ifelse(is.na(path_to_data_1L_chr),
+                   "The study sample is fake data.",
+                   "")
+            ) 
+D <- renewSlot(D,
+               "a_TTUSynopsis",
+               C)
+```
+
+We add arguments to help us create an abstract for the the manuscript.
+
+```{r}
+D <- D %>%
+  renewSlot("a_TTUSynopsis@abstract_args_ls",
+            manufactureSlot(D,
+                            "a_TTUSynopsis",
+                            what_1L_chr = "abstract_args_ls")) 
+```
+
+We create a summary of results that can be interpreted by the program that authors the manuscript.
+
+```{r}
+D <- enhanceSlot(D, 
+                 "a_TTUSynopsis",
+                 depnt_var_nms_chr = c("AQoL-6D",
+                                       "Adolescent AQoL Six Dimension"), 
+                 with_1L_chr = "results_ls")
+```
+
+We create and save the plots that will be used in the manuscript.
+
+```{r}
+author(D,
+       depnt_var_desc_1L_chr = "AQoL-6D",
+       timepoint_new_nms_chr = c("Baseline","Follow-up"),
+       type_1L_chr = "Plots")
+```
+
+We download a program for generating a template manuscript and run it to author a first draft of the manuscript.
+
+```{r}
+author(D,
+       download_tmpl_1L_lgl = T,
+       type_1L_chr = "Report",
+       what_1L_chr = "Manuscript_Auto")
+```
+
+We create the files we will be using for figures submitted to our target journal and also a table of all the dependency packages used in our analysis and reporting.
+
+```{r}
+author(D,
+       depnt_var_desc_1L_chr = "AQoL-6D",
+       timepoint_new_nms_chr = c("Baseline","Follow-up"),
+       type_1L_chr = "Plots",
+       what_1L_chr = "Manuscript_Submission")
+author(D,
+       type_1L_chr = "Dependencies",
+       what_1L_chr = "Manuscript_Submission")
+
+```
+
+We can now customise the template manuscript program so that it can generate the manuscript we plan on submitting. It is recommended that the updated manuscript generation program is saved in a new sub-directory, for example "Manuscript_Submission". Once we have done this (a step undertaken manually, not by this algorithm)  we can the following command to author the submission manuscript.
+
+```{r}
+if(paste0(D@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
+          "/",
+          D@a_TTUSynopsis@a_Ready4showPaths@mkdn_data_dir_1L_chr,
+          "/Manuscript_Submission") %>% 
+   dir.exists()){
+  D <- D %>%
+           renewSlot("a_TTUSynopsis@tables_in_body_lgl",
+                     F) %>%
+           renewSlot("a_TTUSynopsis@figures_in_body_lgl",
+                     F)
+  author(D,
+         download_tmpl_1L_lgl = F,
+         what_1L_chr = "Manuscript_Submission")
+}
+```
+
+We now generate the Supplementary Information for the submission manuscript.
+
+```{r}
+if(paste0(D@a_TTUSynopsis@a_Ready4showPaths@outp_data_dir_1L_chr,
+          "/",
+          D@a_TTUSynopsis@a_Ready4showPaths@mkdn_data_dir_1L_chr,
+          "/Manuscript_Submission") %>% 
+   dir.exists()){
+  authorReport(D %>%
+                 renewSlot("a_TTUSynopsis@rmd_fl_nms_ls",
+                           ready4show::make_rmd_fl_nms_ls(pdf_fl_nm_1L_chr = "TA_PDF")) %>%
+                 procureSlot("a_TTUSynopsis"),
+               fl_nm_1L_chr = "Supplement",
+               #download_tmpl_1L_lgl = F,
+               what_1L_chr = "Manuscript_Submission")
+}
+```
+
+# Tidy workspace
+The preceding steps saved multiple objects (mostly R model objects) that have embedded within them copies of the source dataset. We can now purge all such copies from our output data directory.
+
+```{r}
+author(C,
+       type_1L_chr = "purge_write")
+```
 
